2006-01-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(validateInvalidComponents): Search for the validate root
	and start validating there.

2006-01-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicListUI.java
	(ComponentHandler): Removed unneeded class.
	(ListDataHandler.contentsChanged): Revalidate instead of calling
	damageLayout().
	(ListDataHandler.intervalAdded): Revalidate instead of calling
	damageLayout().
	(ListDataHandler.intervalRemoved): Revalidate instead of calling
	damageLayout().
	(PropertyChangeHandler.propertyChange): Or flags together instead
	of adding them. Don't call damageLayout().
	(componentListener): Removed unnecessary field.
	(damageLayout): Removed unnecessary method.
	(installListeners): Don't install unnecessary listeners.
	(uninstallListeners): Dito.
	(getPreferredSize): Don't ask for the real list height and
	calculate with the previously calculated list height.
	(locationToIndex): Renamed list parameter to l so that it doesn't
	shadow the field with the same name.
	(indexToLocation): Renamed list parameter to l so that it doesn't
	shadow the field with the same name.

2006-01-04  Tom Tromey  <tromey@redhat.com>

	* include/.cvsignore: Ignore config-int.h.

2006-01-04  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicListUI.java
	(getPreferredSize): Rewritten to match the specs.

2006-01-04  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JFileChooser.java
	(showOpenDialog): Set fixed width on the dialog.
	(showSaveDialog): Set fixed width on the dialog.
	(showDialog): Set fixed width on the dialog.

2006-01-04  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicListUI.java
	(locationToIndex): Added FIXME about getVisibleRowCount() usage.
	Adjusted iteration to not use visibleRowCount and instead iterate
	over the real number of elements in cellHeights.
	(indexToLocation): Added FIXME about getVisibleRowCount() usage.